tests/error/enum_errors/mutual_recursive.py.err
Error: Unsupported (at $FILE:12:20)
  |
10 | class EnumA:
11 |     """First enum in mutual recursion."""
12 |     Variant1: "list[EnumB]"
  |                     ^^^^^ Recursive enums are not supported

Guppy compilation failed due to 1 previous error
